@@ -1,52 +1,46 @@
 package com.sa.healntrack.pharmacy_service.sales.infrastructure.adapter.in.rest.mapper;
 
-import com.sa.healntrack.pharmacy_service.catalog.application.exception.MedicineNotFoundException;
-import com.sa.healntrack.pharmacy_service.catalog.application.port.out.persistence.FindMedicines;
-import com.sa.healntrack.pharmacy_service.catalog.domain.Medicine;
 import com.sa.healntrack.pharmacy_service.sales.application.port.in.create_sale.CreateSaleCommand;
 import com.sa.healntrack.pharmacy_service.sales.domain.Sale;
 import com.sa.healntrack.pharmacy_service.sales.domain.SaleItem;
-import com.sa.healntrack.pharmacy_service.sales.domain.value_object.Item;
+import com.sa.healntrack.pharmacy_service.sales.application.port.in.create_sale.Item;
 import com.sa.healntrack.pharmacy_service.sales.infrastructure.adapter.in.rest.dto.*;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Component;
+import lombok.experimental.UtilityClass;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
-@RequiredArgsConstructor
+@UtilityClass
 public class SaleRestMapper {
 
-    private final FindMedicines findMedicines;
-
     public CreateSaleCommand toCommand(CreateSaleDTO d) {
-        List<Item> items = d.items().stream().map(it -> {
-            Medicine med = findMedicines.findByCode(it.medicineCode())
-                    .orElseThrow(() -> new MedicineNotFoundException(it.medicineCode()));
-            return new Item(
-                    med.getId().value(),
-                    it.medicineCode(),
-                    it.quantity(),
-                    med.getCurrentPrice(),
-                    med.getCurrentCost()
-            );
-        }).collect(Collectors.toList());
+        List<Item> items = d.items().stream()
+                .map(it -> new Item(
+                        it.medicineCode(),
+                        it.quantity()
+                ))
+                .toList();
 
         return new CreateSaleCommand(
                 Instant.now().toEpochMilli(),
                 d.sellerId(),
+                d.buyerId(),
+                d.buyerType(),
                 items
         );
     }
 
     public SaleResponseDTO toResponse(Sale s) {
-        List<SaleItemResponseDTO> lines = s.getItems().stream().map(this::toResponse).collect(Collectors.toList());
+        List<SaleItemResponseDTO> lines = s.getItems().stream()
+                .map(SaleRestMapper::toResponse)
+                .toList();
+
         return new SaleResponseDTO(
                 s.getId() != null ? s.getId().value() : null,
                 s.getOccurredAt(),
                 s.getSellerId().value(),
+                s.getBuyerId().value(),
+                s.getBuyerType().name(),
                 s.getStatus(),
                 s.getTotal().value(),
                 lines
@@ -65,3 +59,4 @@ public class SaleRestMapper {
         );
     }
 }
+
